--- a/app/src/main/res/layout/main_fragment1.xml
+++ b/app/src/main/res/layout/main_fragment1.xml
@@ -234,6 +234,7 @@
                 android:layout_marginBottom="10dp"
                 android:background="#9082baff"
                 android:padding="5dp"
+                android:layout_marginRight="10dp"
                 android:text="우리집 등록 하기"
                 android:textColor="@color/allbackg" />
         </FrameLayout>
