--- a/app/src/main/res/layout/community_insert.xml
+++ b/app/src/main/res/layout/community_insert.xml
@@ -3,8 +3,7 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
-    android:background="#ffffffs">
+    android:orientation="vertical">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -21,14 +20,16 @@
             android:layout_marginRight="10dp"
             android:background="@drawable/back"
             android:paddingLeft="10dp" />
+
         <TextView
             android:id="@+id/bartext"
             style="@style/bartext"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
-            android:textColor="@color/allbackg"
-            android:text="게시글 작성" />
+            android:text="게시글 작성"
+            android:textColor="@color/basictxtcolor"
+            android:textStyle="bold" />
 
     </LinearLayout>
 
@@ -47,8 +48,8 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:background="#ffffff"
-            android:textColor="@color/basictxtcolor"
-            android:text="제목: " />
+            android:text="제목: "
+            android:textColor="@color/basictxtcolor" />
 
         <EditText
             android:id="@+id/cmititle"
@@ -71,8 +72,8 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:background="#ffffff"
-            android:textColor="@color/basictxtcolor"
-            android:text="내용 " />
+            android:text="내용 "
+            android:textColor="@color/basictxtcolor" />
 
     </LinearLayout>
 
@@ -134,10 +135,10 @@
             android:layout_width="80dp"
             android:layout_height="45dp"
             android:background="@drawable/btn_on"
+            android:onClick="btnAddClicked"
             android:text="등록"
             android:textColor="@color/basictxtcolor"
-            android:textSize="18dp"
-            android:onClick="btnAddClicked"/>
+            android:textSize="18dp" />
 
         <Button
             android:id="@+id/cancel"
