--- a/app/src/main/res/layout/community_list_view.xml
+++ b/app/src/main/res/layout/community_list_view.xml
@@ -8,19 +8,21 @@
     <ImageView
         android:id="@+id/cmtitle"
         android:layout_width="100dp"
-        android:layout_height="120dp"
+        android:layout_height="100dp"
         android:text="예시입니다"
-        android:padding="10dp"
-        android:src="@drawable/com_facebook_profile_picture_blank_portrait" />
+        android:paddingTop="10dp"
+        android:paddingLeft="10dp"
+        android:paddingRight="10dp"
+        android:background="@drawable/emptyimage" />
 
     <TextView
         android:id="@+id/cmwriter"
         android:layout_width="100dp"
         android:layout_height="40dp"
         android:gravity="center"
-        android:padding="10dp"
+        android:paddingBottom="10dp"
+        android:textSize="13dp"
         android:text="예시입니다"
-        android:textColor="@color/basictxtcolor"
-        android:textStyle="bold" />
+        android:textColor="@color/basictxtcolor"/>
 
 </LinearLayout>
