--- a/app/src/main/res/layout/community_main.xml
+++ b/app/src/main/res/layout/community_main.xml
@@ -34,7 +34,7 @@
         android:layout_marginEnd="18dp"
         android:layout_marginRight="18dp"
         android:layout_marginBottom="11dp"
-        android:src="@drawable/plus" />
+        android:src="@drawable/write" />
 
 
 
