--- a/app/src/main/res/layout/complain_detail.xml
+++ b/app/src/main/res/layout/complain_detail.xml
@@ -21,12 +21,15 @@
             android:layout_marginRight="10dp"
             android:background="@drawable/back"
             android:paddingLeft="10dp" />
+
         <TextView
             android:id="@+id/bartext"
             style="@style/bartext"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="고객센터" />
+            android:text="고객센터"
+            android:textColor="@color/basictxtcolor"
+            android:textStyle="bold" />
 
     </LinearLayout>
 
