--- a/app/src/main/res/layout/complain_insert.xml
+++ b/app/src/main/res/layout/complain_insert.xml
@@ -29,7 +29,8 @@
             android:layout_height="wrap_content"
             android:layout_gravity="center"
             android:text="게시글 작성"
-            android:textColor="@color/basictxtcolor" />
+            android:textColor="@color/basictxtcolor"
+            android:textStyle="bold" />
 
     </LinearLayout>
 
@@ -120,8 +121,8 @@
 
         <Button
             android:id="@+id/insert"
-            android:layout_width="80dp"
-            android:layout_height="40dp"
+            android:layout_width="70dp"
+            android:layout_height="30dp"
             android:background="@drawable/btn_on"
             android:onClick="btnAddClicked"
             android:text="등록"
@@ -130,8 +131,8 @@
 
         <Button
             android:id="@+id/cancel"
-            android:layout_width="80dp"
-            android:layout_height="40dp"
+            android:layout_width="70dp"
+            android:layout_height="30dp"
             android:layout_marginLeft="5dp"
             android:background="@drawable/btn_gray"
             android:text="취소"
