--- a/app/src/main/res/layout/complain_modify.xml
+++ b/app/src/main/res/layout/complain_modify.xml
@@ -21,14 +21,16 @@
             android:layout_marginRight="10dp"
             android:background="@drawable/back"
             android:paddingLeft="10dp" />
+
         <TextView
             android:id="@+id/bartext"
             style="@style/bartext"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
-            android:textColor="@color/allbackg"
-            android:text="게시글 작성" />
+            android:text="게시글 작성"
+            android:textColor="@color/basictxtcolor"
+            android:textStyle="bold" />
 
     </LinearLayout>
 
@@ -127,8 +129,8 @@
 
         <Button
             android:id="@+id/modify"
-            android:layout_width="80dp"
-            android:layout_height="40dp"
+            android:layout_width="70dp"
+            android:layout_height="30dp"
             android:background="@drawable/btn_on"
             android:onClick="btnAddClicked"
             android:text="등록"
@@ -137,8 +139,8 @@
 
         <Button
             android:id="@+id/cancel"
-            android:layout_width="80dp"
-            android:layout_height="40dp"
+            android:layout_width="70dp"
+            android:layout_height="30dp"
             android:layout_marginLeft="5dp"
             android:background="@drawable/btn_gray"
             android:text="취소"
