--- a/app/src/main/res/layout/join_main.xml
+++ b/app/src/main/res/layout/join_main.xml
@@ -29,7 +29,8 @@
             android:layout_height="wrap_content"
             android:layout_gravity="center|left"
             android:text="회원가입"
-            android:textColor="@color/basictxtcolor" />
+            android:textColor="@color/basictxtcolor"
+            android:textStyle="bold" />
     </LinearLayout>
 
     <LinearLayout
@@ -231,12 +232,12 @@
 
     <Button
         android:id="@+id/realJoin"
-        android:layout_width="200dp"
-        android:layout_height="50dp"
+        android:layout_width="270dp"
+        android:layout_height="40dp"
         android:layout_gravity="center"
         android:background="@drawable/btn_gray"
         android:text="가입하기"
-        android:textSize="@dimen/btnSize"
-        android:textColor="@color/black" />
+        android:textColor="@color/black"
+        android:textSize="@dimen/btnSize" />
 
 </LinearLayout>
