--- a/app/src/main/res/layout/list_detail.xml
+++ b/app/src/main/res/layout/list_detail.xml
@@ -18,12 +18,15 @@
             android:layout_marginRight="10dp"
             android:background="@drawable/back"
             android:paddingLeft="10dp" />
+
         <TextView
             android:id="@+id/bartext"
             style="@style/bartext"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="회원 상세정보" />
+            android:text="회원 상세정보"
+            android:textColor="@color/basictxtcolor"
+            android:textStyle="bold"/>
     </LinearLayout>
     <LinearLayout
         android:layout_width="match_parent"
@@ -174,11 +177,11 @@
             <Button
                 android:id="@+id/udelete"
                 android:layout_width="70dp"
-                android:layout_height="40dp"
+                android:layout_height="30dp"
                 android:layout_marginLeft="10dp"
                 android:background="@drawable/btn_on"
                 android:text="탈퇴"
-                android:textColor="#ffffff"
+                android:textColor="@color/basictxtcolor"
                 android:textSize="15dp" />
         </LinearLayout>
     </LinearLayout>
