--- a/app/src/main/res/layout/login_main.xml
+++ b/app/src/main/res/layout/login_main.xml
@@ -30,15 +30,16 @@
             android:background="@drawable/btn_on"
             android:text="@string/login"
             android:textColor="@color/basictxtcolor" />
+
         <Button
             android:id="@+id/joinBtn"
             android:layout_width="270dp"
             android:layout_height="40dp"
-            android:layout_marginTop="10dp"
+            android:layout_marginTop="5dp"
+            android:layout_marginBottom="70dp"
             android:background="@drawable/btn_gray"
-            android:textColor="@color/basictxtcolor"
             android:text="@string/join"
-            android:layout_marginBottom="70dp"/>
+            android:textColor="@color/basictxtcolor" />
 
     </LinearLayout>
 
