--- a/app/src/main/res/layout/login_search_id.xml
+++ b/app/src/main/res/layout/login_search_id.xml
@@ -36,12 +36,14 @@
         android:orientation="horizontal"
         android:gravity="center"
         android:layout_marginTop="20dp">
+
         <TextView
             android:layout_width="100dp"
             android:layout_height="wrap_content"
-            android:textColor="@color/titlebarcolor"
+            android:paddingLeft="10dp"
             android:text="이름"
-            android:textSize="@dimen/contentSize"/>
+            android:textColor="@color/basictxtcolor"
+            android:textSize="@dimen/contentSize" />
         <EditText
             android:id="@+id/finame"
             android:layout_width="250dp"
@@ -59,8 +61,9 @@
         <TextView
             android:layout_width="100dp"
             android:layout_height="wrap_content"
+            android:paddingLeft="10dp"
             android:text="이메일"
-            android:textColor="@color/titlebarcolor"
+            android:textColor="@color/basictxtcolor"
             android:textSize="@dimen/contentSize" />
 
         <EditText
