--- a/app/src/main/res/layout/login_search_pw.xml
+++ b/app/src/main/res/layout/login_search_pw.xml
@@ -7,19 +7,21 @@
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="30dp">
+        android:layout_height="30dp"
+        android:layout_marginTop="20dp">
+
         <Button
             android:layout_width="30dp"
             android:layout_height="30dp"
-            android:background="@drawable/back"
             android:layout_marginLeft="10dp"
-            />
+            android:background="@drawable/back" />
+
         <TextView
+            style="@style/subTitleText"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:textColor="@color/basictxtcolor"
             android:text="비밀번호 찾기"
-            style="@style/subTitleText"/>
+            android:textColor="@color/basictxtcolor" />
 
     </LinearLayout>
     <TextView
@@ -35,17 +37,20 @@
         android:orientation="horizontal"
         android:gravity="center"
         android:layout_marginTop="20dp">
+
         <TextView
             android:layout_width="100dp"
             android:layout_height="wrap_content"
-            android:textColor="@color/basictxtcolor"
+            android:paddingLeft="10dp"
             android:text="아이디"
-            android:textSize="@dimen/contentSize"/>
+            android:textColor="@color/basictxtcolor"
+            android:textSize="@dimen/contentSize" />
+
         <EditText
             android:id="@+id/fpid"
             android:layout_width="250dp"
             android:layout_height="50dp"
-            android:textSize="@dimen/contentSize"/>
+            android:textSize="13dp" />
     </LinearLayout>
     <LinearLayout
         android:layout_width="match_parent"
@@ -53,17 +58,20 @@
         android:orientation="horizontal"
         android:gravity="center"
         android:layout_marginTop="20dp">
+
         <TextView
             android:layout_width="100dp"
             android:layout_height="wrap_content"
-            android:textColor="@color/basictxtcolor"
+            android:paddingLeft="10dp"
             android:text="이름"
-            android:textSize="@dimen/contentSize"/>
+            android:textColor="@color/basictxtcolor"
+            android:textSize="@dimen/contentSize" />
+
         <EditText
             android:id="@+id/fpname"
             android:layout_width="250dp"
             android:layout_height="50dp"
-            android:textSize="@dimen/contentSize"/>
+            android:textSize="13dp" />
     </LinearLayout>
 
     <LinearLayout
@@ -76,6 +84,7 @@
         <TextView
             android:layout_width="100dp"
             android:layout_height="wrap_content"
+            android:paddingLeft="10dp"
             android:text="이메일"
             android:textColor="@color/basictxtcolor"
             android:textSize="@dimen/contentSize" />
@@ -84,7 +93,7 @@
             android:id="@+id/fpemail"
             android:layout_width="250dp"
             android:layout_height="50dp"
-            android:textSize="@dimen/contentSize" />
+            android:textSize="13dp" />
     </LinearLayout>
     <LinearLayout
         android:layout_marginTop="20dp"
