--- a/app/src/main/res/layout/main_my_home_list_view.xml
+++ b/app/src/main/res/layout/main_my_home_list_view.xml
@@ -3,18 +3,21 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="60dp">
+
     <ImageView
-        android:layout_width="60dp"
-        android:layout_height="60dp"
+        android:layout_width="50dp"
+        android:layout_height="50dp"
         android:padding="10dp"
-        android:src="@drawable/ex_home"/>
+        android:src="@drawable/ex_home" />
+
     <TextView
         android:id="@+id/my_home_menu"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:text="광주광역시 서구 경열로 3 한울직업전문학교 302호"
         android:gravity="center|left"
-        android:textAppearance="@style/homeListStyle"/>
+        android:text="광주광역시 서구 경열로 3 한울직업전문학교 302호"
+        android:textAppearance="@style/homeListStyle"
+        android:textSize="14dp" />
 
 
 </LinearLayout>
