--- a/app/src/main/res/layout/menu_main.xml
+++ b/app/src/main/res/layout/menu_main.xml
@@ -23,14 +23,16 @@
             android:layout_marginRight="10dp"
             android:background="@drawable/back"
             android:paddingLeft="10dp" />
+
         <TextView
             android:id="@+id/bartext"
             style="@style/bartext"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
-            android:textColor="@color/allbackg"
-            android:text="메뉴이름" />
+            android:text="메뉴이름"
+            android:textColor="@color/basictxtcolor"
+            android:textStyle="bold" />
 
     </LinearLayout>
     <FrameLayout
