--- a/app/src/main/res/layout/notice_detail.xml
+++ b/app/src/main/res/layout/notice_detail.xml
@@ -21,68 +21,79 @@
             android:layout_marginRight="10dp"
             android:background="@drawable/back"
             android:paddingLeft="10dp" />
+
         <TextView
             android:id="@+id/bartext"
             style="@style/bartext"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="공지사항" />
+            android:text="공지사항"
+            android:textColor="@color/basictxtcolor"
+            android:textStyle="bold" />
 
     </LinearLayout>
 
-    <LinearLayout
+    <ScrollView
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="vertical"
-        android:weightSum="100">
-
-        <TextView
-            android:id="@+id/ndtitle"
-            style="@style/title"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_margin="10dp"
-            android:layout_weight="90"
-            android:text="공지사항 제목" />
-
-        <TextView
-            android:id="@+id/ndcontent"
-            style="@style/content"
-            android:layout_width="match_parent"
-            android:layout_height="500dp"
-            android:layout_marginTop="10dp"
-            android:background="#ffffff"
-            android:text="공지사항 내용" />
-
+        android:layout_height="match_parent">
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal">
+            android:layout_height="match_parent"
+            android:orientation="vertical">
 
             <TextView
-                style="@style/content"
+                android:id="@+id/ndtitle"
+                style="@style/title"
                 android:layout_width="wrap_content"
-                android:layout_height="35dp"
-                android:layout_marginLeft="5dp"
-                android:background="#ffffff"
-                android:text="첨부파일 : " />
+                android:layout_height="wrap_content"
+                android:layout_margin="10dp"
+                android:text="공지사항 제목"
+                android:textSize="15dp" />
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content">
+                <TextView
+                    android:id="@+id/ndcontent"
+                    style="@style/content"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:layout_marginTop="10dp"
+                    android:background="#ffffff"
+                    android:text="공지사항 내용" />
+            </LinearLayout>
 
-            <TextView
-                android:id="@+id/ndfilename"
-                style="@style/content"
-                android:layout_width="wrap_content"
-                android:layout_height="35dp"
-                android:background="#ffffff"
-                android:text="파일이름"
-                android:textColor="@color/black" />
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal">
 
-            <Button
-                android:layout_width="25dp"
-                android:layout_height="25dp"
-                android:background="@drawable/download"
-                android:textColor="@color/basictxtcolor" />
+                <TextView
+                    style="@style/content"
+                    android:layout_width="wrap_content"
+                    android:layout_height="35dp"
+                    android:layout_marginLeft="5dp"
+                    android:background="#ffffff"
+                    android:text="첨부파일 : "
+                    android:textSize="11dp" />
+
+                <TextView
+                    android:id="@+id/ndfilename"
+                    style="@style/content"
+                    android:layout_width="wrap_content"
+                    android:layout_height="35dp"
+                    android:background="#ffffff"
+                    android:text="파일이름"
+                    android:textColor="@color/black"
+                    android:textSize="11dp" />
+
+                <Button
+                    android:layout_width="25dp"
+                    android:layout_height="25dp"
+                    android:background="@drawable/download"
+                    android:textColor="@color/basictxtcolor" />
+            </LinearLayout>
         </LinearLayout>
-    </LinearLayout>
+    </ScrollView>
 
 
 </LinearLayout>
