--- a/app/src/main/res/layout/complain_insert.xml
+++ b/app/src/main/res/layout/complain_insert.xml
@@ -43,6 +43,7 @@
             style="@style/content"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginLeft="10dp"
             android:background="#ffffff"
             android:text="제목: "
             android:textColor="@color/basictxtcolor" />
@@ -66,6 +67,7 @@
             style="@style/content"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginLeft="10dp"
             android:background="#ffffff"
             android:text="내용 "
             android:textColor="@color/basictxtcolor" />
@@ -84,11 +86,15 @@
             android:background="#ffffff"
             android:gravity="top"
             android:hint="내용을 입력하세요"
-            android:inputType="textMultiLine" />
+            android:inputType="textMultiLine"
+            android:paddingLeft="10dp" />
     </LinearLayout>
+
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        android:layout_marginRight="10dp"
+        android:gravity="right">
 
         <Button
             android:id="@+id/btnPhotoLoad"
@@ -114,7 +120,7 @@
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="40dp"
         android:layout_marginTop="10dp"
         android:gravity="center">
 
@@ -127,7 +133,7 @@
             android:onClick="btnAddClicked"
             android:text="등록"
             android:textColor="@color/basictxtcolor"
-            android:textSize="18dp" />
+            android:textSize="15dp" />
 
         <Button
             android:id="@+id/cancel"
@@ -137,7 +143,7 @@
             android:background="@drawable/btn_gray"
             android:text="취소"
             android:textColor="@color/basictxtcolor"
-            android:textSize="18dp" />
+            android:textSize="15dp" />
     </LinearLayout>
 
 
