--- a/app/src/main/res/layout/activity_intro.xml
+++ b/app/src/main/res/layout/activity_intro.xml
@@ -26,29 +26,32 @@
         android:layout_height="0dp"
         android:layout_weight="2"
         android:orientation="vertical">
-    <ProgressBar
-        android:id="@+id/progressBar_intro"
-        style="?android:attr/progressBarStyleHorizontal"
-        android:layout_width="187dp"
-        android:layout_height="17dp"
-        android:progressTint="#4d7dd6"
-        android:layout_marginTop="40dp"
-        android:max="100"
-        android:progress="0"
-        android:layout_gravity="center"
-        />
+
+        <ProgressBar
+            android:id="@+id/progressBar_intro"
+            style="?android:attr/progressBarStyleHorizontal"
+            android:layout_width="210dp"
+            android:layout_height="17dp"
+            android:layout_gravity="center"
+            android:layout_marginTop="40dp"
+            android:max="100"
+            android:progress="0"
+            android:progressTint="#4d7dd6" />
     </LinearLayout>
+
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="40dp"
         android:gravity="center">
+
         <TextView
             android:id="@+id/textView3"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:textColor="#000000"
+            android:layout_marginTop="5sp"
+            android:layout_marginBottom="10dp"
             android:text="Copyright ⓒ한울직업전문학교. All Rights Reserved."
-            android:layout_marginBottom="10dp"/>
+            android:textColor="#000000" />
     </LinearLayout>
 
 
