--- a/app/src/main/res/layout/community_comment_item.xml
+++ b/app/src/main/res/layout/community_comment_item.xml
@@ -8,13 +8,14 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_margin="5dp"
         android:orientation="horizontal">
 
         <TextView
             android:id="@+id/cmi_writer"
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
-            android:layout_marginLeft="5dp"
+            android:layout_marginLeft="10dp"
             android:gravity="center"
             android:text="글쓴이 : "
             android:textSize="13dp" />
@@ -23,59 +24,58 @@
             android:id="@+id/cmi_content"
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
-            android:textSize="11dp"
             android:layout_marginLeft="5dp"
             android:gravity="center"
-            android:text="내용"/>
+            android:text="내용"
+            android:textSize="12dp" />
 
         <EditText
             android:id="@+id/cmi_modify_content"
-            android:layout_width="215dp"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginRight="10dp"
             android:text="수정내용"
-            android:textSize="13dp" />
+            android:textSize="12dp" />
 
 
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="35dp"
 
+            android:gravity="center"
+            android:orientation="horizontal">
 
-    <LinearLayout
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:gravity="right"
-        android:layout_gravity="center"
+            <Button
+                android:id="@+id/cmi_modify_insert"
+                android:layout_width="30dp"
+                android:layout_height="25dp"
+                android:layout_marginLeft="3dp"
+                android:background="@drawable/btn_on"
+                android:text="등록"
+                android:textColor="@color/basictxtcolor"
+                android:textSize="11dp" />
 
-        android:orientation="horizontal">
+            <Button
+                android:id="@+id/cmi_modify"
+                android:layout_width="30dp"
+                android:layout_height="25dp"
+                android:layout_marginLeft="3dp"
+                android:background="@drawable/btn_on"
+                android:text="수정"
+                android:textColor="@color/basictxtcolor"
+                android:textSize="11dp" />
 
-        <Button
-            android:id="@+id/cmi_modify_insert"
-            android:layout_width="40dp"
-            android:layout_height="30dp"
-            android:layout_marginLeft="3dp"
-            android:textSize="11dp"
-            android:background="@drawable/btn_on"
-            android:textColor="@color/basictxtcolor"
-            android:text="등록" />
-
-        <Button
-            android:id="@+id/cmi_modify"
-            android:layout_width="40dp"
-            android:layout_height="30dp"
-            android:layout_marginLeft="3dp"
-            android:textSize="11dp"
-            android:background="@drawable/btn_on"
-            android:textColor="@color/basictxtcolor"
-            android:text="수정" />
-
-        <Button
-            android:id="@+id/cmi_delete"
-            android:layout_width="40dp"
-            android:layout_height="30dp"
-            android:layout_marginLeft="5dp"
-            android:textSize="11dp"
-            android:background="@drawable/btn_on"
-            android:textColor="@color/basictxtcolor"
-            android:text="삭제" />
-    </LinearLayout>
+            <Button
+                android:id="@+id/cmi_delete"
+                android:layout_width="30dp"
+                android:layout_height="25dp"
+                android:layout_gravity="center"
+                android:layout_marginLeft="5dp"
+                android:background="@drawable/btn_on"
+                android:text="삭제"
+                android:textColor="@color/basictxtcolor"
+                android:textSize="11dp" />
+        </LinearLayout>
     </LinearLayout>
 
 </LinearLayout>
