--- a/app/src/main/res/layout/community_insert.xml
+++ b/app/src/main/res/layout/community_insert.xml
@@ -3,6 +3,7 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="#ffffff"
     android:orientation="vertical">
 
     <LinearLayout
@@ -33,6 +34,7 @@
 
     </LinearLayout>
 
+
     <LinearLayout
         android:layout_marginTop="3dp"
         android:layout_width="400dp"
@@ -61,6 +63,12 @@
             android:hint="제목을 입력하세요"
             android:inputType="textPersonName" />
     </LinearLayout>
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="1dp"
+        android:background="#cccccc"
+        android:layout_marginLeft="5dp"
+        android:layout_marginRight="5dp"/>
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -76,7 +84,12 @@
             android:textColor="@color/basictxtcolor" />
 
     </LinearLayout>
-
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="1dp"
+        android:background="#cccccc"
+        android:layout_marginLeft="5dp"
+        android:layout_marginRight="5dp"/>
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
@@ -85,12 +98,19 @@
             android:id="@+id/cmiImageView"
             android:layout_width="match_parent"
             android:layout_height="200dp"
-            android:background="#ffffff" />
+            android:background="#ffffff"
+            android:padding="5dp" />
     </LinearLayout>
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="1dp"
+        android:background="#cccccc"
+        android:layout_marginLeft="5dp"
+        android:layout_marginRight="5dp"/>
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="200dp">
+        android:layout_height="wrap_content">
 
         <EditText
             android:id="@+id/cmicontent"
@@ -101,12 +121,18 @@
             android:gravity="top"
             android:hint="내용을 입력하세요"
             android:inputType="textMultiLine" />
-
     </LinearLayout>
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="1dp"
+        android:background="#cccccc"
+        android:layout_marginLeft="5dp"
+        android:layout_marginRight="5dp"/>
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:gravity="right"
         android:orientation="horizontal">
 
         <Button
@@ -119,36 +145,43 @@
             android:id="@+id/btnPhotoDelete"
             android:layout_width="40dp"
             android:layout_height="40dp"
+            android:layout_marginRight="5dp"
             android:background="@drawable/imagedelete" />
 
     </LinearLayout>
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="1dp"
+        android:background="#cccccc"
+        android:layout_marginLeft="5dp"
+        android:layout_marginRight="5dp"/>
 
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="50dp"
         android:gravity="center">
 
 
         <Button
             android:id="@+id/insert"
-            android:layout_width="80dp"
-            android:layout_height="45dp"
+            android:layout_width="70dp"
+            android:layout_height="30dp"
             android:background="@drawable/btn_on"
             android:onClick="btnAddClicked"
             android:text="등록"
             android:textColor="@color/basictxtcolor"
-            android:textSize="18dp" />
+            android:textSize="15dp" />
 
         <Button
             android:id="@+id/cancel"
-            android:layout_width="80dp"
-            android:layout_height="45dp"
+            android:layout_width="70dp"
+            android:layout_height="30dp"
             android:layout_marginLeft="5dp"
             android:background="@drawable/btn_gray"
             android:text="취소"
             android:textColor="@color/basictxtcolor"
-            android:textSize="18dp" />
+            android:textSize="15dp" />
     </LinearLayout>
 
 
