--- a/app/src/main/res/layout/complain_detail.xml
+++ b/app/src/main/res/layout/complain_detail.xml
@@ -36,37 +36,47 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="horizontal">
+        android:orientation="horizontal"
+        android:paddingLeft="10dp">
 
         <TextView
             android:id="@+id/cpdtitle"
             style="@style/title"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="문의사항 제목" />
+            android:text="문의사항 제목"
+            android:textSize="15dp" />
 
     </LinearLayout>
 
     <LinearLayout
-        android:layout_width="80dp"
+        android:layout_width="wrap_content"
         android:layout_height="36dp"
         android:padding="3dp"
         android:layout_gravity="right"
         android:gravity="center">
+
         <Button
             android:id="@+id/modify"
-            android:layout_width="25dp"
-            android:layout_height="25dp"
-            android:background="@drawable/modify_b"/>
+            android:layout_width="30dp"
+            android:layout_height="30dp"
+            android:background="@drawable/modify_b" />
 
         <Button
             android:id="@+id/delete"
-            android:layout_width="30dp"
-            android:layout_height="30dp"
-            android:layout_marginLeft="8dp"
-            android:background="@drawable/cancel_b" />
+            android:layout_width="40dp"
+            android:layout_height="40dp"
+            android:layout_marginLeft="5dp"
+            android:layout_marginRight="10dp"
+            android:background="@drawable/cancel_b"
+            android:padding="5dp" />
     </LinearLayout>
-
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="1dp"
+        android:background="#cccccc"
+        android:layout_marginLeft="5dp"
+        android:layout_marginRight="5dp"/>
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
@@ -85,13 +95,16 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:background="#ffffff"
+                android:paddingLeft="10dp"
                 android:text="문의사항 내용" />
-
-
         </LinearLayout>
 
-
-
+        <View
+            android:layout_width="match_parent"
+            android:layout_height="1dp"
+            android:background="#cccccc"
+            android:layout_marginLeft="5dp"
+            android:layout_marginRight="5dp"/>
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
@@ -100,7 +113,7 @@
                 style="@style/content"
                 android:layout_width="wrap_content"
                 android:layout_height="35dp"
-                android:layout_marginLeft="3dp"
+                android:layout_marginLeft="5dp"
                 android:background="#ffffff"
                 android:text="작성자 : " />
 
@@ -112,6 +125,7 @@
                 android:background="#ffffff"
                 android:text="작성자" />
         </LinearLayout>
+
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -121,7 +135,7 @@
                 style="@style/content"
                 android:layout_width="wrap_content"
                 android:layout_height="35dp"
-                android:layout_marginLeft="3dp"
+                android:layout_marginLeft="5dp"
                 android:background="#ffffff"
                 android:text="첨부파일 : " />
 
