--- a/app/src/main/res/layout/complain_list_view.xml
+++ b/app/src/main/res/layout/complain_list_view.xml
@@ -1,26 +1,28 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:orientation="vertical"
-    android:layout_marginTop="15dp">
+    android:layout_marginTop="10dp"
+    android:orientation="vertical">
 
     <TextView
         android:id="@+id/cptitle"
-        android:layout_marginLeft="4dp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:textSize="14dp"
+        android:layout_marginLeft="4dp"
+        android:paddingLeft="5dp"
         android:text="예시입니다"
-        android:textColor="@color/basictxtcolor" />
+        android:textColor="@color/basictxtcolor"
+        android:textSize="14dp" />
+
     <TextView
         android:id="@+id/cpwriter"
-        android:layout_marginRight="3dp"
         android:layout_width="wrap_content"
-        android:layout_gravity="right"
-        android:textSize="12dp"
         android:layout_height="wrap_content"
+        android:layout_gravity="right"
+        android:layout_marginRight="3dp"
+        android:layout_marginBottom="5dp"
+        android:paddingRight="5dp"
         android:text="예시입니다"
-        android:layout_marginBottom="10dp"/>
+        android:textSize="12dp" />
 </LinearLayout>
