--- a/app/src/main/res/layout/main_my_home_list_view.xml
+++ b/app/src/main/res/layout/main_my_home_list_view.xml
@@ -2,22 +2,28 @@
 <LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="60dp">
+    android:layout_height="wrap_content"
+    android:layout_margin="5dp">
 
     <ImageView
-        android:layout_width="50dp"
-        android:layout_height="50dp"
-        android:padding="10dp"
-        android:src="@drawable/ex_home" />
+        android:layout_width="40dp"
+        android:layout_height="40dp"
+        android:layout_marginLeft="10dp"
+        android:src="@drawable/ex_home"
+        android:layout_marginBottom="5dp"/>
 
     <TextView
         android:id="@+id/my_home_menu"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        android:layout_marginLeft="5dp"
         android:gravity="center|left"
+        android:padding="5dp"
         android:text="광주광역시 서구 경열로 3 한울직업전문학교 302호"
         android:textAppearance="@style/homeListStyle"
         android:textSize="14dp" />
+
 
 
 </LinearLayout>
