--- a/app/src/main/res/layout/member_list_view.xml
+++ b/app/src/main/res/layout/member_list_view.xml
@@ -2,24 +2,26 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
+    android:layout_marginLeft="15dp"
     android:layout_marginBottom="10dp"
-    android:layout_margin="10dp">
+    android:orientation="vertical">
+
     <TextView
         android:id="@+id/uid"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="예시입니다"
         android:paddingLeft="5dp"
-        android:textStyle="bold"
-        android:textSize="14dp"/>
+        android:text="예시입니다"
+        android:textSize="14dp"
+        android:textStyle="bold" />
+
     <TextView
         android:id="@+id/uname"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="예시입니다"
-        android:paddingTop="3dp"
         android:paddingLeft="5dp"
-        android:textSize="11dp"/>
+        android:paddingTop="3dp"
+        android:text="예시입니다"
+        android:textSize="11dp" />
 
 </LinearLayout>
