--- a/app/src/main/res/layout/notice_detail.xml
+++ b/app/src/main/res/layout/notice_detail.xml
@@ -49,19 +49,32 @@
                 android:layout_margin="10dp"
                 android:text="공지사항 제목"
                 android:textSize="15dp" />
+            <View
+                android:layout_width="match_parent"
+                android:layout_height="1dp"
+                android:background="#cccccc"
+                android:layout_marginLeft="5dp"
+                android:layout_marginRight="5dp"/>
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content">
+
                 <TextView
                     android:id="@+id/ndcontent"
                     style="@style/content"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
+                    android:layout_marginLeft="10dp"
                     android:layout_marginTop="10dp"
                     android:background="#ffffff"
                     android:text="공지사항 내용" />
             </LinearLayout>
-
+            <View
+                android:layout_width="match_parent"
+                android:layout_height="1dp"
+                android:background="#cccccc"
+                android:layout_marginLeft="5dp"
+                android:layout_marginRight="5dp"/>
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
@@ -71,7 +84,7 @@
                     style="@style/content"
                     android:layout_width="wrap_content"
                     android:layout_height="35dp"
-                    android:layout_marginLeft="5dp"
+                    android:layout_marginLeft="15dp"
                     android:background="#ffffff"
                     android:text="첨부파일 : "
                     android:textSize="11dp" />
@@ -89,6 +102,7 @@
                 <Button
                     android:layout_width="25dp"
                     android:layout_height="25dp"
+                    android:layout_marginLeft="5dp"
                     android:background="@drawable/download"
                     android:textColor="@color/basictxtcolor" />
             </LinearLayout>
