--- a/app/src/main/res/layout/notice_list_view.xml
+++ b/app/src/main/res/layout/notice_list_view.xml
@@ -10,9 +10,10 @@
         android:layout_width="match_parent"
         android:layout_height="40dp"
         android:layout_gravity="center"
-        android:padding="10dp"
+        android:paddingLeft="15dp"
+        android:paddingTop="10dp"
         android:text="예시입니다"
-        android:textSize="14dp"
-        android:textColor="@color/basictxtcolor" />
+        android:textColor="@color/basictxtcolor"
+        android:textSize="14dp" />
 
 </LinearLayout>
